--- a/flask.service
+++ b/flask.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Backlog Tracker App
+Description=My Awesome Cat App
 After=network.target
 
 [Service]
@@ -14,4 +14,4 @@ ExecStart=/bin/bash -c "source secrets.sh\
 Restart=always
 
 [Install]
-WantedBy=multi-user.targetx
+WantedBy=multi-user.target
